codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step5_finish_sed_range.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1442
expression: active_blob(&chat)
---
• Ran 3 commands · ctrl + t to view transcript
  ├ ls -la
  ├ cat foo.txt
  └ sed -n 100,200p foo.txt
