codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__terminal_interaction_replay.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
assertion_line: 1258
expression: rendered
---
↳ Interacted with terminal
  └ first line
    second line
